crates/service/tests/rename/snapshots/features__rename__rename__tag_def.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 7
          },
          "end": {
            "line": 2,
            "character": 9
          }
        },
        "newText": "$t"
      },
      {
        "range": {
          "start": {
            "line": 6,
            "character": 23
          },
          "end": {
            "line": 6,
            "character": 25
          }
        },
        "newText": "$t"
      },
      {
        "range": {
          "start": {
            "line": 7,
            "character": 14
          },
          "end": {
            "line": 7,
            "character": 16
          }
        },
        "newText": "$t"
      }
    ]
  }
}
