crates/service/tests/rename/snapshots/features__rename__rename__type_use.snap
---
source: crates/service/tests/rename/rename.rs
expression: response
---
{
  "changes": {
    "untitled:test": [
      {
        "range": {
          "start": {
            "line": 2,
            "character": 10
          },
          "end": {
            "line": 2,
            "character": 15
          }
        },
        "newText": "$ty"
      },
      {
        "range": {
          "start": {
            "line": 3,
            "character": 16
          },
          "end": {
            "line": 3,
            "character": 21
          }
        },
        "newText": "$ty"
      }
    ]
  }
}
